# almalinux-workbench

./: AL10-gnome-calls-build  AL10-linphone-build  AL10-template  README.md  launch-gnome-calls.sh  meson.build
